--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <option value="December">December</option>
       </select>
     </div>
+    <p>Shayas</p>
     <h1 class="month-name"></h1>
     <div class="date">
       <p class="date-no">1</p>
